--- a/view/index.html
+++ b/view/index.html
@@ -8,7 +8,7 @@
 
         <!-- This is an example component -->
         <div class="flex  mx-auto flex flex-col h-full ">
-            <div id="msg_area" class="h-full  overflow-auto bg-[url('./public/images/bg.jpg')]">
+            <div id="msg_area" class="h-full  overflow-auto bg-[url('/public/images/bg.jpg')]">
               <!-- msg area -->
             </div>
              
