--- a/view/index.html
+++ b/view/index.html
@@ -17,7 +17,9 @@
                 <label for="chat" class="sr-only">Your message</label>
                 <div class="flex  w-full py-2 px-3 bg-gray-50 rounded-lg dark:bg-gray-700">
                     <div id="username" name="username" type="text" class="block p-2.5 w-1/3 text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" ></div>
-                    <textarea id="chat" name="chat" rows="1" class="block mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Your message..." required></textarea>
+                    <input id="chat" name="chat" rows="1"
+                        class="block mx-4 p-2.5 w-full text-sm text-gray-900 bg-white rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-800 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="Your message..." required></input>
                     <button type="submit" class="inline-flex justify-center p-2 text-blue-600 rounded-full cursor-pointer hover:bg-blue-100 dark:text-blue-500 dark:hover:bg-gray-600">
                         <svg class="w-6 h-6 rotate-90" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10.894 2.553a1 1 0 00-1.788 0l-7 14a1 1 0 001.169 1.409l5-1.429A1 1 0 009 15.571V11a1 1 0 112 0v4.571a1 1 0 00.725.962l5 1.428a1 1 0 001.17-1.408l-7-14z"></path></svg>
                     </button>
@@ -110,7 +112,9 @@
                 await fetch("/api/chats/getChats")
                 .then((data)=>{data.json}) 
                 .then((data)=>{
-                    data.forEach(element => {
+                    // console.log(data)
+                    for (let i = 0; i < data.length; i++) {
+                        let element = data[i]
                         if(element.username==window.localStorage.getItem("user")){
                             let txt = `<div class=" flex justify-self-end  flex w-2/3 p-2 items-start flex-row-reverse gap-2.5">
                                     <img class="w-8 h-8 rounded-full" src="/public/images/pfp.JPG" alt="Jese image">
@@ -188,7 +192,8 @@
                             let chatBox = document.getElementById("msg_area")
                             chatBox.innerHTML += txt
                         }
-                    });
+                        }
+                    ;
                 })
             }
             getMsg()
